After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695814 - [PATCH] Sunrise/sunset times displayed in UTC instead of local time
[PATCH] Sunrise/sunset times displayed in UTC instead of local time
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: clock
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-14 02:45 UTC by Jethro Beekman
Modified: 2013-05-20 14:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_time_zone_new() in convert_time_to_str() expects a tzid, not a name (490 bytes, patch)
2013-03-14 02:45 UTC, Jethro Beekman
committed Details | Review

Description Jethro Beekman 2013-03-14 02:45:43 UTC
Created attachment 238838 [details] [review]
g_time_zone_new() in convert_time_to_str() expects a tzid, not a name

This is all pretty self-explanatory. The bug was introduced in cd1a0db671b6eb57efcf2770287882e625ae1753 .