Display sunrise/sunset times in local time not UTC

Thanks Jethro Beekman for the report and the fix

https://bugzilla.gnome.org/show_bug.cgi?id=695814